# cuda-for-engineers

dd_1d_global/: CMakeLists.txt  kernel.cu
dd_1d_shared/: CMakeLists.txt  kernel.cu  kernel.h  main.cpp
dist_1d_fused/: CMakeLists.txt  kernel.cu
dist_1d_thrust/: CMakeLists.txt  kernel.cu
dist_1d_thrust_lambda/: CMakeLists.txt  kernel.cu
dist_2d/: CMakeLists.txt  kernel.cu
dist_2d_image/: CMakeLists.txt  kernel.cu
dist_3d/: CMakeLists.txt  kernel.cu
dist_v1/: CMakeLists.txt  main.cpp
dist_v1_cuda/: CMakeLists.txt  kernel.cu
dist_v2/: CMakeLists.txt  aux_functions.cpp  aux_functions.h  main.cpp
dist_v2_cuda/: CMakeLists.txt  kernel.cu  kernel.h  main.cpp
dist_v2_cuda_unified/: CMakeLists.txt  kernel.cu
flashlight/: CMakeLists.txt  interactions.h  kernel.cu  kernel.h  main.cpp
heat_2d/: CMakeLists.txt  interactions.h  kernel.cu  kernel.h  main.cpp
linreg/: CMakeLists.txt  kernel.cu
misc_npp/: CMakeLists.txt  main.cu
norm/: CMakeLists.txt  kernel.cu
sharpen/: CMakeLists.txt  kernel.cu
sharpen_npp/: CMakeLists.txt  main.cu
sharpen_shared/: CMakeLists.txt  kernel.cu  main.cpp
sharpen_shared2/: CMakeLists.txt  kernel.cu  kernel.h
stability/: CMakeLists.txt  interactions.h  kernel.cu  kernel.h  main.cpp
thrustpi/: CMakeLists.txt  kernel.cu
thrustpi_curand/: CMakeLists.txt  kernel.cu
thrustpi_lambda/: CMakeLists.txt  kernel.cu
vis_3d/: CMakeLists.txt  device_funcs.cu  device_funcs.cuh  interactions.h  kernel.cu  kernel.h  main.cpp
